# kittbar-rust

./: Cargo.toml  README.md  install
src/: main.rs  monitor.rs  monitor1.rs  notepad.rs  notepad.sh
