[package]
name = "kitbar"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"], default-features = false }
toml = { version = "0.8", features = ["parse"], default-features = false }
chrono = { version = "0.4", features = ["clock"] }
crossterm ="0.27"
pipewire-native-spa = "0.1.2"
kitty-rc="0.5.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
debug = false
strip = true